force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FormType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormType__c</fullName>
    <description>Created as a part of SFS-3033</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPS Complex</fullName>
            </value>
            <value>
                <fullName>Working Set Pre Use Inspection</fullName>
            </value>
            <value>
                <fullName>Clean Water Chemical Acceptance</fullName>
            </value>
            <value>
                <fullName>Waste Water &amp; Bio Chemical Acceptance</fullName>
            </value>
            <value>
                <fullName>Confined Spaces Pre Entry Checklist</fullName>
            </value>
            <value>
                <fullName>Non-infra Raise new or follow on work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>