force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FullBodyHarness__c.field-meta.xml
<CustomField>
    <fullName>FSM_FullBodyHarness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Full body harness</label>
    <type>Checkbox</type>
</CustomField>