force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FullBodyHarnessComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FullBodyHarnessComments__c</fullName>
    <description>SFS-4203</description>
    <label>Full body harness comments</label>
    <type>TextArea</type>
</CustomField>