force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FullPPEinExclusionZone__c.field-meta.xml
<CustomField>
    <fullName>FSM_FullPPEinExclusionZone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When contacted by driver return to delivery area to observe safe disconnection, fit blanking flange, lock delivery point and return valves to correct position. FULL PPE MUST BE WORN WHEN INSIDE EXCLUSION ZONE</description>
    <inlineHelpText>Full PPE must be worn when inside exclusion zone.</inlineHelpText>
    <label>Full PPE in Exclusion Zone</label>
    <type>Checkbox</type>
</CustomField>