force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GasDetectors__c.field-meta.xml
<CustomField>
    <fullName>FSM_GasDetectors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Gas detectors</label>
    <type>Checkbox</type>
</CustomField>