force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GasDetectorsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GasDetectorsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Gas detectors comments</label>
    <type>TextArea</type>
</CustomField>