force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GasDetectorsFreshAir__c.field-meta.xml
<CustomField>
    <fullName>FSM_GasDetectorsFreshAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Gas detectors (fresh air test ok)</label>
    <type>Checkbox</type>
</CustomField>