force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GasDetectorsFreshAirComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GasDetectorsFreshAirComments__c</fullName>
    <description>SFS-4203</description>
    <label>Gas detector (fresh air test ok)comments</label>
    <type>TextArea</type>
</CustomField>