force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GatePerimeterChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_GatePerimeterChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>Gate &amp; perimeter Checks</label>
    <type>Checkbox</type>
</CustomField>