force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GatePerimeterComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GatePerimeterComments__c</fullName>
    <description>SFS-3065</description>
    <label>Gate &amp; perimeter Comments</label>
    <type>TextArea</type>
</CustomField>