force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GeneralComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GeneralComments__c</fullName>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>