force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GoldenMeasuresSheetCompleted__c.field-meta.xml
<CustomField>
    <fullName>FSM_GoldenMeasuresSheetCompleted__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Golden Measures Sheet Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>