force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_GroundsMaintenanceComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GroundsMaintenanceComments__c</fullName>
    <description>SFS-3065</description>
    <label>Grounds maintenance Comments</label>
    <type>TextArea</type>
</CustomField>