force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IndividualPumpComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_IndividualPumpComments__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Individual Pump Comments</label>
    <type>TextArea</type>
</CustomField>