force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InformControlManager__c.field-meta.xml
<CustomField>
    <fullName>FSM_InformControlManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Inform control/manager(of planned entry)</label>
    <type>Checkbox</type>
</CustomField>