force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InformControlManagerComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_InformControlManagerComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>Of planned entry</inlineHelpText>
    <label>Inform control/manager comments</label>
    <type>TextArea</type>
</CustomField>