force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InformControlOffice__c.field-meta.xml
<CustomField>
    <fullName>FSM_InformControlOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Inform control/office (of safe exit)</label>
    <type>Checkbox</type>
</CustomField>