force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InformControlOfficeComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_InformControlOfficeComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>Of safe exit</inlineHelpText>
    <label>Inform control/office comments</label>
    <type>TextArea</type>
</CustomField>