force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InformDriverGravityTest__c.field-meta.xml
<CustomField>
    <fullName>FSM_InformDriverGravityTest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Driver must gravity test before pressurizing</inlineHelpText>
    <label>Driver must gravity test before pressuri</label>
    <type>Checkbox</type>
</CustomField>