force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InspectEntry__c.field-meta.xml
<CustomField>
    <fullName>FSM_InspectEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Inspect entry</label>
    <type>Checkbox</type>
</CustomField>