force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InspectEntryComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_InspectEntryComments__c</fullName>
    <description>SFS-4203</description>
    <label>Inspect entry comments</label>
    <type>TextArea</type>
</CustomField>