force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_InspectStorageTanksDamage__c.field-meta.xml
<CustomField>
    <fullName>FSM_InspectStorageTanksDamage__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Inspect the storage tank(s) for damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>