force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IntBuildingKioskChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_IntBuildingKioskChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065 .</description>
    <label>Internal building kiosk / check</label>
    <type>Checkbox</type>
</CustomField>