force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IntBuildingKioskComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_IntBuildingKioskComments__c</fullName>
    <description>SFS-3065</description>
    <label>Internal building kiosk / comments</label>
    <type>TextArea</type>
</CustomField>