force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IntrinsicallySafeLighting__c.field-meta.xml
<CustomField>
    <fullName>FSM_IntrinsicallySafeLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <inlineHelpText>hand/cap/lamps</inlineHelpText>
    <label>Intrinsically safe lighting</label>
    <type>Checkbox</type>
</CustomField>