force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IntrinsicallySafeLightingComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_IntrinsicallySafeLightingComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>hand/cap/lamps</inlineHelpText>
    <label>Intrinsically safe lighting comments</label>
    <type>TextArea</type>
</CustomField>