force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IsolateMachinery__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsolateMachinery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Isolate machinery, flows, chemicals</label>
    <type>Checkbox</type>
</CustomField>