force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_IsolateMachineryComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsolateMachineryComments__c</fullName>
    <description>SFS-4203</description>
    <label>Isolate machinery,flow,chemical comments</label>
    <type>TextArea</type>
</CustomField>