force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_KiosksPaperworkChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_KiosksPaperworkChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>Building kiosks paperwork check</label>
    <type>Checkbox</type>
</CustomField>