force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_KiosksPaperworkComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_KiosksPaperworkComments__c</fullName>
    <description>SFS-3065</description>
    <label>Building kiosks paperwork comments</label>
    <type>TextArea</type>
</CustomField>