force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_KneePads__c.field-meta.xml
<CustomField>
    <fullName>FSM_KneePads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Knee pads</label>
    <type>Checkbox</type>
</CustomField>