force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_KneePadsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_KneePadsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Knee pads comments</label>
    <type>TextArea</type>
</CustomField>