force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_LineItemCount__c</fullName>
    <description>SFI-2041</description>
    <label>Line Item Count</label>
    <summaryForeignKey>FSM_DCFLineItemNonInfra__c.FSM_DataCaptureFormNonInfra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>