force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_LongTextDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_LongTextDescription__c</fullName>
    <description>SFS-4795</description>
    <label>Long text description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>