force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_LowerEquipment__c.field-meta.xml
<CustomField>
    <fullName>FSM_LowerEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Lower equipment</label>
    <type>Checkbox</type>
</CustomField>