force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_LowerEquipmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_LowerEquipmentComments__c</fullName>
    <description>SFS-4203</description>
    <label>Lower equipment comments</label>
    <type>TextArea</type>
</CustomField>