force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_MaintainCommunication__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaintainCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Maintain communication (Every 5 mins)</label>
    <type>Checkbox</type>
</CustomField>