force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_MaintainCommunicationComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaintainCommunicationComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>Every 5 mins</inlineHelpText>
    <label>Maintain communication with team comment</label>
    <type>TextArea</type>
</CustomField>