force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_MaintenanceChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaintenanceChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>Maintenance Checks</label>
    <type>Checkbox</type>
</CustomField>