force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_MaintenanceComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaintenanceComments__c</fullName>
    <description>SFS-3065</description>
    <label>Maintenance Comments</label>
    <type>TextArea</type>
</CustomField>