force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ManholeCoverLifters__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManholeCoverLifters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Manhole cover lifters / keys</label>
    <type>Checkbox</type>
</CustomField>