force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ManholeCoverLiftersComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManholeCoverLiftersComments__c</fullName>
    <description>SFS-4203</description>
    <label>Manhole cover lifters / keys comments</label>
    <type>TextArea</type>
</CustomField>