force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Medium__c.field-meta.xml
<CustomField>
    <fullName>FSM_Medium__c</fullName>
    <defaultValue>&apos;MOBI&apos;</defaultValue>
    <description>SFI-1801</description>
    <label>Medium</label>
    <length>15</length>
    <type>Text</type>
</CustomField>