force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Names__c.field-meta.xml
<CustomField>
    <fullName>FSM_Names__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <formula>CreatedBy.FirstName +&apos; &apos; +  CreatedBy.LastName</formula>
    <label>Names</label>
    <type>Text</type>
</CustomField>