force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_NoOfEformsOfSameType__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoOfEformsOfSameType__c</fullName>
    <description>SFI-1801</description>
    <label>No of EForms of same type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>