force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ObserveDeliveryFor5Minute__c.field-meta.xml
<CustomField>
    <fullName>FSM_ObserveDeliveryFor5Minute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observe delivery for 5 minutes</label>
    <type>Checkbox</type>
</CustomField>