force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ObserveDeliveryFor5Minutes__c.field-meta.xml
<CustomField>
    <fullName>FSM_ObserveDeliveryFor5Minutes__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Observe and check for potential issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>