force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OdourTreatmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_OdourTreatmentComments__c</fullName>
    <description>SFS-3065</description>
    <label>Odour Treatment Comments</label>
    <type>TextArea</type>
</CustomField>