force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OfficeAttentionReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_OfficeAttentionReason__c</fullName>
    <description>SFS-4795</description>
    <label>Office attention reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>