force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OfficeAttentionRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_OfficeAttentionRequired__c</fullName>
    <description>SFS-4795</description>
    <inlineHelpText>To be used when additional planning is required e.g, tankering, crane, parts, etc.</inlineHelpText>
    <label>Office attention is required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>