force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OpenDeliveryValve__c.field-meta.xml
<CustomField>
    <fullName>FSM_OpenDeliveryValve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open delivery valve on STW side</label>
    <type>Checkbox</type>
</CustomField>