force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OtherCommunicationEquip__c.field-meta.xml
<CustomField>
    <fullName>FSM_OtherCommunicationEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <inlineHelpText>gas-air horns</inlineHelpText>
    <label>Other communication equipment</label>
    <type>Checkbox</type>
</CustomField>