force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OtherCommunicationEquipComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_OtherCommunicationEquipComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>gas-air horns</inlineHelpText>
    <label>Other communication equipment comments</label>
    <type>TextArea</type>
</CustomField>