force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OutfallComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallComments__c</fullName>
    <description>SFS-3065</description>
    <label>Outfall comments</label>
    <type>TextArea</type>
</CustomField>