force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_OverPressurisationSafeguards__c.field-meta.xml
<CustomField>
    <fullName>FSM_OverPressurisationSafeguards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensure driver and operator are aware of any safeguards detailed in the LOP for Acceptance and Delivery for the relevant chemical to prevent over pressurisation during discharge. Common control are proving functionality of vents, overflows and ensuring maximum delivery pressures are known and not exceeded.</description>
    <label>Over Pressurisation Safeguards</label>
    <type>Checkbox</type>
</CustomField>