force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PermitComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitComments__c</fullName>
    <description>SFS-3065</description>
    <label>Permit Comments</label>
    <type>TextArea</type>
</CustomField>