force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PersonallCorrectEquipment__c.field-meta.xml
<CustomField>
    <fullName>FSM_PersonallCorrectEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>All personnel have the correct equipment</label>
    <type>Checkbox</type>
</CustomField>