force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PersonallCorrectEquipmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_PersonallCorrectEquipmentComments__c</fullName>
    <description>SFS-4203</description>
    <label>All personnel correct equipment comments</label>
    <type>TextArea</type>
</CustomField>