force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PreferredEngineer__c.field-meta.xml
<CustomField>
    <fullName>FSM_PreferredEngineer__c</fullName>
    <label>Preferred Engineer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>