force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PreUseChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_PreUseChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Carry out pre use checks(equipment &amp; BA)</label>
    <type>Checkbox</type>
</CustomField>