force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PreUseChecksComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_PreUseChecksComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>equipment &amp; BA</inlineHelpText>
    <label>Carry out pre use checks comments</label>
    <type>TextArea</type>
</CustomField>