force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PumpDebrisChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_PumpDebrisChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-3065</description>
    <label>Pump Debris Checks</label>
    <type>Checkbox</type>
</CustomField>