force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_PumpDebrisComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_PumpDebrisComments__c</fullName>
    <description>SFS-3065</description>
    <label>Pump Debris Comments</label>
    <type>TextArea</type>
</CustomField>