force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FSM_Quantity__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>