force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RecheckWeather__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecheckWeather__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Re-check weather</label>
    <type>Checkbox</type>
</CustomField>