force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RecheckWeatherComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecheckWeatherComments__c</fullName>
    <description>SFS-4203</description>
    <label>Re-check weather comments</label>
    <type>TextArea</type>
</CustomField>