force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RecordBarrelNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecordBarrelNumber__c</fullName>
    <description>Only data type of this field changed from Number to Text as part of bug SFS-4361</description>
    <label>Record Barrel Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>