force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RecoverEquipment__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecoverEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Recover equipment</label>
    <type>Checkbox</type>
</CustomField>