force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RecoverEquipmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecoverEquipmentComments__c</fullName>
    <description>SFS-4203</description>
    <label>Recover equipment comments</label>
    <type>TextArea</type>
</CustomField>