force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RejectDelivery__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Data Capture Form: Waste Water &amp; Bio Chemical Acceptance and Authorization to Discharge Form</description>
    <label>Reject Delivery</label>
    <type>Checkbox</type>
</CustomField>