force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RejectDetails__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectDetails__c</fullName>
    <description>Created new field based on SFS-5335</description>
    <label>If reject, give details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>