force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RelatedLineItemCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_RelatedLineItemCount__c</fullName>
    <description>SFI-2041</description>
    <label>Related Line Item Count</label>
    <summaryFilterItems>
        <field>FSM_DCFLineItemNonInfra__c.FSM_IsParentLineItem__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FSM_DCFLineItemNonInfra__c.FSM_DataCaptureFormNonInfra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>