force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RemoveLockOff__c.field-meta.xml
<CustomField>
    <fullName>FSM_RemoveLockOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove lock off from delivery point</label>
    <type>Checkbox</type>
</CustomField>