force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RequestType__c.field-meta.xml
<CustomField>
    <fullName>FSM_RequestType__c</fullName>
    <description>Created as a part of SFS-4795</description>
    <label>Request type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raise Follow on work</fullName>
            </value>
            <value>
                <fullName>Raise New Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>