force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RescueTeam__c.field-meta.xml
<CustomField>
    <fullName>FSM_RescueTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Rescue team in place</label>
    <type>Checkbox</type>
</CustomField>