force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_RescueTeamComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_RescueTeamComments__c</fullName>
    <description>SFS-4203</description>
    <label>Rescue team in place comments</label>
    <type>TextArea</type>
</CustomField>