force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SafetyBootsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SafetyBootsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Safety boots comments</label>
    <type>TextArea</type>
</CustomField>