force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SafetyHelmet__c.field-meta.xml
<CustomField>
    <fullName>FSM_SafetyHelmet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Safety helmet</label>
    <type>Checkbox</type>
</CustomField>