force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SafetyHelmetComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SafetyHelmetComments__c</fullName>
    <description>SFS-4203</description>
    <label>Safety helmet comments</label>
    <type>TextArea</type>
</CustomField>