force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SafetyWellingtons__c.field-meta.xml
<CustomField>
    <fullName>FSM_SafetyWellingtons__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Safety wellingtons or waders</label>
    <type>Checkbox</type>
</CustomField>