force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SafetyWellingtonsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SafetyWellingtonsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Safety wellingtons or waders comments</label>
    <type>TextArea</type>
</CustomField>